--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@vercel/postgres": "^0.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "leaflet": "^1.9.4",
     "next": "^13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
     "superjson": "1.12.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
@@ -37,10 +39,12 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.37.0",
+    "@types/leaflet": "^1.9.3",
     "@types/node": "^18.16.0",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/react-leaflet": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "6.0.0",
     "@typescript-eslint/parser": "6.0.0",
     "autoprefixer": "^10.4.14",
