--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
+    "@vercel/analytics": "^1.0.1",
     "@vercel/postgres": "^0.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
