--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -26,6 +27,7 @@
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
+    "@ts-react/form": "^1.8.2",
     "@vercel/analytics": "^1.0.1",
     "@vercel/postgres": "^0.4.0",
     "class-variance-authority": "^0.7.0",
@@ -35,6 +37,7 @@
     "next-auth": "^4.22.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
     "superjson": "1.12.2",
