--- a/package.json
+++ b/package.json
@@ -10,68 +10,66 @@
     "start": "next start"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.1.1",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.0.0",
+    "@auth/prisma-adapter": "^1.0.5",
+    "@hookform/resolvers": "^3.3.2",
+    "@prisma/client": "^5.5.0",
     "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-navigation-menu": "^1.1.3",
-    "@radix-ui/react-popover": "^1.0.6",
-    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.4",
-    "@radix-ui/react-tooltip": "^1.0.6",
-    "@t3-oss/env-nextjs": "^0.3.1",
-    "@tanstack/react-query": "^4.29.7",
-    "@tanstack/react-table": "^8.9.3",
-    "@trpc/client": "^10.26.0",
-    "@trpc/next": "^10.26.0",
-    "@trpc/react-query": "^10.26.0",
-    "@trpc/server": "^10.26.0",
-    "@ts-react/form": "^1.8.2",
-    "@vercel/analytics": "^1.0.1",
-    "@vercel/postgres": "^0.4.0",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@t3-oss/env-nextjs": "^0.7.1",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-table": "^8.10.7",
+    "@trpc/client": "^10.42.0",
+    "@trpc/next": "^10.42.0",
+    "@trpc/react-query": "^10.42.0",
+    "@trpc/server": "^10.42.0",
+    "@ts-react/form": "^1.8.3",
+    "@vercel/analytics": "^1.1.1",
+    "@vercel/postgres": "^0.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "leaflet": "^1.9.4",
-    "next": "^13.4.12",
-    "next-auth": "^4.22.3",
+    "lucide-react": "^0.288.0",
+    "next": "^13.5.6",
+    "next-auth": "^5.0.0-beta.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.2",
-    "react-icons": "^4.10.1",
+    "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
-    "superjson": "1.12.2",
+    "superjson": "^2.2.0",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.6",
-    "zod": "^3.21.4"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/eslint": "^8.37.0",
-    "@types/leaflet": "^1.9.3",
-    "@types/node": "^18.16.0",
-    "@types/prettier": "^2.7.2",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
+    "@types/eslint": "^8.44.6",
+    "@types/leaflet": "^1.9.7",
+    "@types/node": "^18.18.6",
+    "@types/prettier": "^2.7.3",
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
     "@types/react-leaflet": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "6.0.0",
-    "@typescript-eslint/parser": "6.0.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.40.0",
-    "eslint-config-next": "^13.4.2",
-    "postcss": "^8.4.26",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.2.8",
-    "prisma": "^5.0.0",
-    "tailwindcss": "^3.3.3",
+    "@typescript-eslint/eslint-plugin": "6.9.0",
+    "@typescript-eslint/parser": "6.9.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "^13.5.6",
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
+    "prisma": "^5.5.0",
+    "tailwindcss": "^3.3.4",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
-  },
-  "ct3aMetadata": {
-    "initVersion": "7.16.0"
+    "typescript": "^5.2.2"
   }
 }
