--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "ts-node": "ts-node"
   },
   "dependencies": {
+    "@auth/core": "^0.18.0",
     "@auth/prisma-adapter": "^1.0.5",
     "@hookform/resolvers": "^3.3.2",
-    "@prisma/client": "^5.5.0",
+    "@prisma/client": "^5.5.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -67,7 +69,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
-    "prisma": "^5.5.0",
+    "prisma": "^5.5.2",
     "tailwindcss": "^3.3.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
