--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "postinstall": "prisma generate",
+    "postinstall": "npm run generate",
+    "generate": "prisma generate",
     "lint": "next lint",
     "start": "next start",
     "ts-node": "ts-node"
@@ -70,6 +71,7 @@
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "prisma": "^5.5.2",
+    "prisma-json-schema-generator": "^4.0.0",
     "tailwindcss": "^3.3.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
