--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "postinstall": "npm run generate",
+    "postinstall": "prisma generate",
     "generate": "prisma generate",
     "lint": "next lint",
     "start": "next start",
