--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "prebuild": "prisma generate",
     "postinstall": "prisma generate",
     "generate": "prisma generate",
     "lint": "next lint",
