--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "@auth/core": "^0.18.3",
     "@auth/prisma-adapter": "^1.0.8",
+    "@conform-to/dom": "^1.0.0-pre.6",
+    "@conform-to/react": "^1.0.0-pre.6",
+    "@conform-to/zod": "^1.0.0-pre.6",
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-checkbox": "^1.0.4",
