--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tanstack/react-table": "^8.11.3",
     "@vercel/analytics": "^1.1.1",
     "@vercel/postgres": "^0.5.1",
+    "@vercel/speed-insights": "^1.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
