--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "generate": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "ts-node": "ts-node"
+    "generate:map": "ts-node ./bin/generate-map.ts"
   },
   "dependencies": {
     "@auth/core": "^0.20.0",
@@ -62,6 +62,7 @@
     "@typescript-eslint/eslint-plugin": "6.18.1",
     "@typescript-eslint/parser": "6.18.1",
     "autoprefixer": "^10.4.16",
+    "dotenv-cli": "^7.3.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "postcss": "^8.4.33",
