--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "generate": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "generate:map": "ts-node ./bin/generate-map.ts"
+    "generate:map": "ts-node ./bin/generate-map.ts",
+    "db:backup": "source .env && pg_dump -h $POSTGRES_HOST -Fc -O -U $POSTGRES_USER $POSTGRES_DATABASE > ./bin/database-backups/fo2db-backup"
   },
   "dependencies": {
-    "@auth/core": "^0.20.0",
-    "@auth/prisma-adapter": "^1.0.14",
+    "@auth/core": "^0.22.0",
+    "@auth/prisma-adapter": "^1.0.16",
     "@conform-to/dom": "^1.0.0-pre.6",
     "@conform-to/react": "^1.0.0-pre.6",
     "@conform-to/zod": "^1.0.0-pre.6",
@@ -29,22 +30,22 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@t3-oss/env-nextjs": "^0.7.1",
-    "@tanstack/react-table": "^8.11.3",
-    "@vercel/analytics": "^1.1.1",
+    "@t3-oss/env-nextjs": "^0.7.3",
+    "@tanstack/react-table": "^8.11.6",
+    "@vercel/analytics": "^1.1.2",
     "@vercel/postgres": "^0.5.1",
-    "@vercel/speed-insights": "^1.0.3",
+    "@vercel/speed-insights": "^1.0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "leaflet": "^1.9.4",
-    "lucide-react": "^0.309.0",
-    "next": "^14.0.4",
-    "next-auth": "^5.0.0-beta.4",
+    "lucide-react": "^0.312.0",
+    "next": "^14.1.0",
+    "next-auth": "^5.0.0-beta.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.3",
-    "react-icons": "^5.0.0",
+    "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.0",
@@ -52,21 +53,21 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.1",
+    "@types/eslint": "^8.56.2",
     "@types/leaflet": "^1.9.8",
-    "@types/node": "^20.10.8",
+    "@types/node": "^20.11.5",
     "@types/prettier": "^2.7.3",
-    "@types/react": "^18.2.47",
+    "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/react-leaflet": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "6.18.1",
-    "@typescript-eslint/parser": "6.18.1",
-    "autoprefixer": "^10.4.16",
+    "@typescript-eslint/eslint-plugin": "6.19.0",
+    "@typescript-eslint/parser": "6.19.0",
+    "autoprefixer": "^10.4.17",
     "dotenv-cli": "^7.3.0",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.4",
+    "eslint-config-next": "^14.1.0",
     "postcss": "^8.4.33",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.8.1",
     "prisma-json-schema-generator": "^5.1.1",
