--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,11 +45,10 @@
     "node_modules"
   ],
   "ts-node": {
-    // these options are overrides used only by ts-node
-    // same as the --compilerOptions flag and the TS_NODE_COMPILER_OPTIONS environment variable
+    "files": true,
     "compilerOptions": {
       "module": "commonjs",
     },
-    "require": ["dotenv/config"]
+    "require": ["ts-node/register", "tsconfig-paths/register",  "dotenv/config"]
   }
 }
