--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@conform-to/zod": "^1.0.0-rc.0",
     "@prisma/client": "^5.8.1",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
