fix scripts, cleanup deps

--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "generate": "prisma generate",
-    "lint": "biome lint .",
+    "lint": "biome check .",
     "lint:fix": "biome check --apply .",
-
     "start": "next start",
     "generate:map": "ts-node ./bin/generate-map.ts",
     "db:backup": "ts-node ./bin/backup-db.ts",
@@ -60,26 +59,19 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.5.3",
-    "@types/eslint": "^8.56.2",
     "@types/leaflet": "^1.9.8",
     "@types/node": "^20.11.6",
-    "@types/prettier": "^2.7.3",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/react-leaflet": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "6.19.1",
-    "@typescript-eslint/parser": "6.19.1",
     "autoprefixer": "^10.4.17",
     "dotenv-cli": "^7.3.0",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0",
     "postcss": "^8.4.33",
-    "prettier": "^3.2.4",
-    "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.8.1",
     "prisma-json-schema-generator": "^5.1.1",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   }
 }
