--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.3.1",
+    "geist": "^1.2.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.315.0",
     "next": "^14.1.0",
