--- a/package.json
+++ b/package.json
@@ -1,77 +1,82 @@
 {
-  "name": "fo2",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "build": "next build",
-    "dev": "next dev",
-    "postinstall": "prisma generate",
-    "generate": "prisma generate",
-    "lint": "biome check .",
-    "lint:fix": "biome check --apply .",
-    "start": "next start",
-    "generate:map": "ts-node ./bin/generate-map.ts",
-    "db:backup": "ts-node ./bin/backup-db.ts",
-    "add:component": "npx shadcn-ui@latest add"
-  },
-  "dependencies": {
-    "@auth/core": "^0.22.0",
-    "@auth/prisma-adapter": "^1.0.16",
-    "@conform-to/dom": "^1.0.0-rc.0",
-    "@conform-to/react": "^1.0.0-rc.0",
-    "@conform-to/zod": "^1.0.0-rc.0",
-    "@prisma/client": "^5.10.2",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@t3-oss/env-nextjs": "^0.8.0",
-    "@tanstack/react-table": "^8.11.7",
-    "@vercel/analytics": "^1.1.2",
-    "@vercel/postgres": "^0.7.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "cmdk": "^0.2.0",
-    "date-fns": "^3.3.1",
-    "geist": "^1.2.2",
-    "leaflet": "^1.9.4",
-    "lucide-react": "^0.315.0",
-    "next": "^14.1.0",
-    "next-auth": "^5.0.0-beta.5",
-    "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.49.3",
-    "react-icons": "^5.0.1",
-    "react-leaflet": "^4.2.1",
-    "superjson": "^2.2.1",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.5.3",
-    "@types/leaflet": "^1.9.8",
-    "@types/node": "^20.11.6",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "@types/react-leaflet": "^3.0.0",
-    "autoprefixer": "^10.4.17",
-    "dotenv-cli": "^7.3.0",
-    "postcss": "^8.4.33",
-    "prisma": "^5.10.2",
-    "prisma-json-schema-generator": "^5.1.1",
-    "tailwindcss": "^3.4.1",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3"
-  }
+	"name": "fo2",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"build": "next build",
+		"dev": "next dev",
+		"postinstall": "prisma generate",
+		"generate": "prisma generate",
+		"lint": "biome check .",
+		"lint:fix": "biome check --apply .",
+		"start": "next start",
+		"generate:map": "ts-node ./bin/generate-map.ts",
+		"db:backup": "ts-node ./bin/backup-db.ts",
+		"assets:sync": "ts-node ./bin/trello-assets.ts",
+		"add:component": "npx shadcn-ui@latest add"
+	},
+	"dependencies": {
+		"@auth/core": "^0.22.0",
+		"@auth/prisma-adapter": "^1.0.16",
+		"@conform-to/dom": "^1.0.0-rc.0",
+		"@conform-to/react": "^1.0.0-rc.0",
+		"@conform-to/zod": "^1.0.0-rc.0",
+		"@prisma/client": "^5.10.2",
+		"@radix-ui/react-checkbox": "^1.0.4",
+		"@radix-ui/react-collapsible": "^1.0.3",
+		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-dropdown-menu": "^2.0.6",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-navigation-menu": "^1.1.4",
+		"@radix-ui/react-popover": "^1.0.7",
+		"@radix-ui/react-select": "^2.0.0",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-tabs": "^1.0.4",
+		"@radix-ui/react-toast": "^1.1.5",
+		"@radix-ui/react-tooltip": "^1.0.7",
+		"@t3-oss/env-nextjs": "^0.8.0",
+		"@tanstack/react-table": "^8.11.7",
+		"@vercel/analytics": "^1.1.2",
+		"@vercel/postgres": "^0.7.2",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"cmdk": "^0.2.0",
+		"date-fns": "^3.3.1",
+		"geist": "^1.2.2",
+		"leaflet": "^1.9.4",
+		"lucide-react": "^0.315.0",
+		"next": "^14.1.0",
+		"next-auth": "^5.0.0-beta.5",
+		"next-themes": "^0.2.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-hook-form": "^7.49.3",
+		"react-icons": "^5.0.1",
+		"react-leaflet": "^4.2.1",
+		"superjson": "^2.2.1",
+		"tailwind-merge": "^2.2.1",
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.22.4"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.5.3",
+		"@types/decompress": "^4.2.7",
+		"@types/inquirer": "^9.0.7",
+		"@types/leaflet": "^1.9.8",
+		"@types/node": "^20.11.6",
+		"@types/react": "^18.2.48",
+		"@types/react-dom": "^18.2.18",
+		"@types/react-leaflet": "^3.0.0",
+		"autoprefixer": "^10.4.17",
+		"decompress": "^4.2.1",
+		"dotenv-cli": "^7.3.0",
+		"inquirer": "^8.2.6",
+		"postcss": "^8.4.33",
+		"prisma": "^5.10.2",
+		"prisma-json-schema-generator": "^5.1.1",
+		"tailwindcss": "^3.4.1",
+		"ts-node": "^10.9.2",
+		"tsconfig-paths": "^4.2.0",
+		"typescript": "^5.3.3"
+	}
 }
