--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
 		"postinstall": "prisma generate",
 		"generate": "prisma generate",
 		"lint": "biome check .",
-		"lint:fix": "biome check --apply .",
+		"lint:fix": "biome check --write .",
 		"type-check": "tsc --noEmit",
 		"check": "npm run lint && npm run type-check",
 		"start": "next start",
 		"generate:map": "ts-node ./bin/generate-map.ts",
-		"db:backup": "ts-node ./bin/backup-db.ts",
+		"db:backup": "bun ./bin/backup-db.ts",
 		"assets:sync": "ts-node ./bin/trello-assets.ts",
 		"add:component": "npx shadcn-ui@latest add",
 		"gen:api": "openapi-ts"
 	},
 	"dependencies": {
-		"@auth/core": "^0.30.0",
-		"@auth/prisma-adapter": "^2.0.0",
-		"@conform-to/dom": "^1.1.2",
-		"@conform-to/react": "^1.1.2",
-		"@conform-to/zod": "^1.1.2",
-		"@prisma/client": "^5.13.0",
+		"@auth/core": "^0.32.0",
+		"@auth/prisma-adapter": "^2.2.0",
+		"@conform-to/dom": "^1.1.4",
+		"@conform-to/react": "^1.1.4",
+		"@conform-to/zod": "^1.1.4",
+		"@hookform/resolvers": "^3.6.0",
+		"@prisma/client": "^5.15.0",
 		"@radix-ui/react-checkbox": "^1.0.4",
 		"@radix-ui/react-collapsible": "^1.0.3",
 		"@radix-ui/react-dialog": "^1.0.5",
@@ -34,54 +35,64 @@
 		"@radix-ui/react-navigation-menu": "^1.1.4",
 		"@radix-ui/react-popover": "^1.0.7",
 		"@radix-ui/react-progress": "^1.0.3",
+		"@radix-ui/react-scroll-area": "^1.0.5",
 		"@radix-ui/react-select": "^2.0.0",
 		"@radix-ui/react-separator": "^1.0.3",
+		"@radix-ui/react-slider": "^1.1.2",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-tabs": "^1.0.4",
 		"@radix-ui/react-toast": "^1.1.5",
+		"@radix-ui/react-toggle": "^1.0.3",
+		"@radix-ui/react-toggle-group": "^1.0.4",
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"@t3-oss/env-nextjs": "^0.10.1",
-		"@tanstack/react-table": "^8.16.0",
-		"@vercel/analytics": "^1.2.2",
+		"@tanstack/react-query": "^5.45.0",
+		"@tanstack/react-table": "^8.17.3",
+		"@vercel/analytics": "^1.3.1",
 		"@vercel/postgres": "^0.8.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
-		"cmdk": "^0.2.1",
+		"cmdk": "^1.0.0",
 		"date-fns": "^3.6.0",
 		"geist": "^1.3.0",
 		"leaflet": "^1.9.4",
-		"lucide-react": "^0.373.0",
+		"lucide-react": "^0.394.0",
 		"next": "^14.2.3",
-		"next-auth": "^5.0.0-beta.17",
+		"next-auth": "^5.0.0-beta.19",
 		"next-themes": "^0.3.0",
-		"nuqs": "^1.17.1",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-hook-form": "^7.51.3",
-		"react-icons": "^5.1.0",
+		"nuqs": "^1.17.4",
+		"react": "18.3.1",
+		"react-dom": "18.3.1",
+		"react-hook-form": "^7.51.5",
+		"react-icons": "^5.2.1",
 		"react-leaflet": "^4.2.1",
+		"sass": "^1.77.4",
 		"superjson": "^2.2.1",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
-		"zod": "^3.23.4"
+		"zod": "^3.23.8",
+		"zsa": "^0.3.4",
+		"zsa-react": "^0.1.5",
+		"zsa-react-query": "^0.1.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.7.1",
-		"@hey-api/openapi-ts": "^0.42.1",
+		"@biomejs/biome": "1.8.1",
+		"@hey-api/openapi-ts": "^0.46.3",
 		"@types/decompress": "^4.2.7",
 		"@types/inquirer": "^9.0.7",
 		"@types/leaflet": "^1.9.12",
-		"@types/node": "^20.12.7",
-		"@types/react": "^18.2.0",
-		"@types/react-dom": "^18.2.0",
+		"@types/node": "^20.14.2",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
 		"@types/react-leaflet": "^3.0.0",
 		"autoprefixer": "^10.4.19",
 		"decompress": "^4.2.1",
-		"dotenv-cli": "^7.4.1",
-		"inquirer": "^9.2.19",
+		"dotenv-cli": "^7.4.2",
+		"inquirer": "^9.2.23",
+		"pixel-borders": "^1.1.4",
 		"postcss": "^8.4.38",
-		"prisma": "^5.13.0",
-		"tailwindcss": "^3.4.3",
+		"prisma": "^5.15.0",
+		"tailwindcss": "^3.4.4",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
 		"typescript": "^5.4.5"
