--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 	"scripts": {
 		"build": "next build",
 		"dev": "next dev",
-		"postinstall": "prisma generate",
-		"generate": "prisma generate",
+		"postinstall": "npm run generate",
+		"generate": "zenstack generate",
 		"lint": "biome check .",
 		"lint:fix": "biome check --write .",
 		"type-check": "tsc --noEmit",
@@ -20,81 +20,86 @@
 		"gen:api": "openapi-ts"
 	},
 	"dependencies": {
-		"@auth/core": "^0.32.0",
-		"@auth/prisma-adapter": "^2.2.0",
-		"@conform-to/dom": "^1.1.4",
-		"@conform-to/react": "^1.1.4",
-		"@conform-to/zod": "^1.1.4",
-		"@hookform/resolvers": "^3.6.0",
-		"@prisma/client": "^5.15.0",
-		"@radix-ui/react-checkbox": "^1.0.4",
-		"@radix-ui/react-collapsible": "^1.0.3",
-		"@radix-ui/react-dialog": "^1.0.5",
-		"@radix-ui/react-dropdown-menu": "^2.0.6",
-		"@radix-ui/react-label": "^2.0.2",
-		"@radix-ui/react-navigation-menu": "^1.1.4",
-		"@radix-ui/react-popover": "^1.0.7",
-		"@radix-ui/react-progress": "^1.0.3",
-		"@radix-ui/react-scroll-area": "^1.0.5",
-		"@radix-ui/react-select": "^2.0.0",
-		"@radix-ui/react-separator": "^1.0.3",
-		"@radix-ui/react-slider": "^1.1.2",
-		"@radix-ui/react-slot": "^1.0.2",
-		"@radix-ui/react-tabs": "^1.0.4",
-		"@radix-ui/react-toast": "^1.1.5",
-		"@radix-ui/react-toggle": "^1.0.3",
-		"@radix-ui/react-toggle-group": "^1.0.4",
-		"@radix-ui/react-tooltip": "^1.0.7",
-		"@t3-oss/env-nextjs": "^0.10.1",
-		"@tanstack/react-query": "^5.45.0",
-		"@tanstack/react-table": "^8.17.3",
+		"@auth/core": "^0.34.2",
+		"@auth/prisma-adapter": "^2.4.2",
+		"@conform-to/dom": "^1.1.5",
+		"@conform-to/react": "^1.1.5",
+		"@conform-to/zod": "^1.1.5",
+		"@hookform/resolvers": "^3.9.0",
+		"@prisma/client": "^5.18.0",
+		"@radix-ui/react-checkbox": "^1.1.1",
+		"@radix-ui/react-collapsible": "^1.1.0",
+		"@radix-ui/react-dialog": "^1.1.1",
+		"@radix-ui/react-dropdown-menu": "^2.1.1",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-navigation-menu": "^1.2.0",
+		"@radix-ui/react-popover": "^1.1.1",
+		"@radix-ui/react-progress": "^1.1.0",
+		"@radix-ui/react-scroll-area": "^1.1.0",
+		"@radix-ui/react-select": "^2.1.1",
+		"@radix-ui/react-separator": "^1.1.0",
+		"@radix-ui/react-slider": "^1.2.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tabs": "^1.1.0",
+		"@radix-ui/react-toast": "^1.2.1",
+		"@radix-ui/react-toggle": "^1.1.0",
+		"@radix-ui/react-toggle-group": "^1.1.0",
+		"@radix-ui/react-tooltip": "^1.1.2",
+		"@t3-oss/env-nextjs": "^0.11.0",
+		"@tanstack/react-query": "^5.51.23",
+		"@tanstack/react-table": "^8.20.1",
 		"@vercel/analytics": "^1.3.1",
-		"@vercel/postgres": "^0.8.0",
+		"@vercel/postgres": "^0.9.0",
+		"@zenstackhq/runtime": "2.4.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
 		"date-fns": "^3.6.0",
-		"geist": "^1.3.0",
+		"geist": "^1.3.1",
 		"leaflet": "^1.9.4",
-		"lucide-react": "^0.394.0",
-		"next": "^14.2.3",
-		"next-auth": "^5.0.0-beta.19",
+		"lucide-react": "^0.426.0",
+		"next": "^14.2.5",
+		"next-auth": "^5.0.0-beta.20",
 		"next-themes": "^0.3.0",
-		"nuqs": "^1.17.4",
+		"nuqs": "^1.17.8",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
-		"react-hook-form": "^7.51.5",
+		"react-hook-form": "^7.52.2",
 		"react-icons": "^5.2.1",
 		"react-leaflet": "^4.2.1",
-		"sass": "^1.77.4",
+		"sass": "^1.77.8",
 		"superjson": "^2.2.1",
-		"tailwind-merge": "^2.3.0",
+		"tailwind-merge": "^2.4.0",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.8",
-		"zsa": "^0.3.4",
-		"zsa-react": "^0.1.5",
-		"zsa-react-query": "^0.1.0"
+		"zsa": "^0.5.1",
+		"zsa-react": "^0.2.2",
+		"zsa-react-query": "^0.2.1"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.8.1",
-		"@hey-api/openapi-ts": "^0.46.3",
+		"@biomejs/biome": "1.8.3",
+		"@hey-api/openapi-ts": "^0.52.3",
 		"@types/decompress": "^4.2.7",
 		"@types/inquirer": "^9.0.7",
 		"@types/leaflet": "^1.9.12",
-		"@types/node": "^20.14.2",
+		"@types/node": "^22.1.0",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@types/react-leaflet": "^3.0.0",
-		"autoprefixer": "^10.4.19",
+		"autoprefixer": "^10.4.20",
 		"decompress": "^4.2.1",
 		"dotenv-cli": "^7.4.2",
-		"inquirer": "^9.2.23",
+		"inquirer": "^10.1.8",
 		"pixel-borders": "^1.1.4",
-		"postcss": "^8.4.38",
-		"prisma": "^5.15.0",
-		"tailwindcss": "^3.4.4",
+		"postcss": "^8.4.41",
+		"prisma": "^5.18.0",
+		"tailwindcss": "^3.4.9",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
-		"typescript": "^5.4.5"
+		"typescript": "^5.5.4",
+		"zenstack": "2.4.1"
+	},
+	"zenstack": {
+		"schema": "./database/schema.zmodel"
 	}
 }
