--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
 		"type-check": "tsc --noEmit",
 		"check": "npm run lint && npm run type-check",
 		"start": "next start",
-		"generate:map": "ts-node ./bin/generate-map.ts",
+		"generate:map": "bun ./bin/generate-map.ts",
 		"db:backup": "bun ./bin/backup-db.ts",
-		"assets:sync": "ts-node ./bin/trello-assets.ts",
+		"assets:sync": "bun ./bin/trello-assets.ts",
 		"add:component": "npx shadcn-ui@latest add",
-		"gen:api": "openapi-ts"
+		"gen:fo:api": "openapi-ts",
+		"gen:api": "openapi-typescript ./database/open-api.json -o ./src/utils/rest/schema.d.ts"
 	},
 	"dependencies": {
 		"@auth/core": "^0.34.2",
@@ -26,6 +27,9 @@
 		"@conform-to/react": "^1.1.5",
 		"@conform-to/zod": "^1.1.5",
 		"@hookform/resolvers": "^3.9.0",
+		"@jsonforms/core": "^3.3.0",
+		"@jsonforms/react": "^3.3.0",
+		"@jsonforms/vanilla-renderers": "^3.3.0",
 		"@prisma/client": "^5.18.0",
 		"@radix-ui/react-checkbox": "^1.1.1",
 		"@radix-ui/react-collapsible": "^1.1.0",
@@ -45,12 +49,20 @@
 		"@radix-ui/react-toggle": "^1.1.0",
 		"@radix-ui/react-toggle-group": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.2",
+		"@refinedev/core": "^4.54.0",
+		"@refinedev/nextjs-router": "^6.1.0",
+		"@refinedev/react-hook-form": "^4.9.0",
+		"@rjsf/core": "^5.20.0",
+		"@rjsf/utils": "^5.20.0",
+		"@rjsf/validator-ajv8": "^5.20.0",
 		"@t3-oss/env-nextjs": "^0.11.0",
 		"@tanstack/react-query": "^5.51.23",
 		"@tanstack/react-table": "^8.20.1",
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/postgres": "^0.9.0",
 		"@zenstackhq/runtime": "2.4.1",
+		"@zenstackhq/server": "^2.4.1",
+		"@zenstackhq/tanstack-query": "^2.4.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
@@ -62,11 +74,13 @@
 		"next-auth": "^5.0.0-beta.20",
 		"next-themes": "^0.3.0",
 		"nuqs": "^1.17.8",
+		"openapi-fetch": "^0.11.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-hook-form": "^7.52.2",
 		"react-icons": "^5.2.1",
 		"react-leaflet": "^4.2.1",
+		"refine-jsonapi": "^1.0.5",
 		"sass": "^1.77.8",
 		"superjson": "^2.2.1",
 		"tailwind-merge": "^2.4.0",
@@ -86,20 +100,25 @@
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@types/react-leaflet": "^3.0.0",
+		"@zenstackhq/openapi": "^2.4.1",
 		"autoprefixer": "^10.4.20",
 		"decompress": "^4.2.1",
 		"dotenv-cli": "^7.4.2",
 		"inquirer": "^10.1.8",
+		"openapi-typescript": "^7.3.0",
 		"pixel-borders": "^1.1.4",
 		"postcss": "^8.4.41",
 		"prisma": "^5.18.0",
+		"prisma-json-schema-generator": "^5.1.5",
 		"tailwindcss": "^3.4.9",
-		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
 		"typescript": "^5.5.4",
 		"zenstack": "2.4.1"
 	},
 	"zenstack": {
 		"schema": "./database/schema.zmodel"
+	},
+	"prisma": {
+		"schema": "./database/generated.prisma"
 	}
 }
