--- a/package.json
+++ b/package.json
@@ -31,33 +31,40 @@
 		"@jsonforms/react": "^3.3.0",
 		"@jsonforms/vanilla-renderers": "^3.3.0",
 		"@prisma/client": "^5.18.0",
+		"@radix-ui/react-accordion": "^1.2.0",
+		"@radix-ui/react-alert-dialog": "^1.1.1",
+		"@radix-ui/react-aspect-ratio": "^1.1.0",
+		"@radix-ui/react-avatar": "^1.1.0",
 		"@radix-ui/react-checkbox": "^1.1.1",
 		"@radix-ui/react-collapsible": "^1.1.0",
+		"@radix-ui/react-context-menu": "^2.2.1",
 		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-dropdown-menu": "^2.1.1",
+		"@radix-ui/react-hover-card": "^1.1.1",
+		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-menubar": "^1.1.1",
 		"@radix-ui/react-navigation-menu": "^1.2.0",
 		"@radix-ui/react-popover": "^1.1.1",
 		"@radix-ui/react-progress": "^1.1.0",
+		"@radix-ui/react-radio-group": "^1.2.0",
 		"@radix-ui/react-scroll-area": "^1.1.0",
 		"@radix-ui/react-select": "^2.1.1",
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slider": "^1.2.0",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-switch": "^1.1.0",
 		"@radix-ui/react-tabs": "^1.1.0",
 		"@radix-ui/react-toast": "^1.2.1",
 		"@radix-ui/react-toggle": "^1.1.0",
 		"@radix-ui/react-toggle-group": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.2",
-		"@refinedev/core": "^4.54.0",
-		"@refinedev/nextjs-router": "^6.1.0",
-		"@refinedev/react-hook-form": "^4.9.0",
-		"@rjsf/core": "^5.20.0",
-		"@rjsf/utils": "^5.20.0",
-		"@rjsf/validator-ajv8": "^5.20.0",
-		"@t3-oss/env-nextjs": "^0.11.0",
-		"@tanstack/react-query": "^5.51.23",
-		"@tanstack/react-table": "^8.20.1",
+		"@rjsf/core": "^5.20.1",
+		"@rjsf/utils": "^5.20.1",
+		"@rjsf/validator-ajv8": "^5.20.1",
+		"@t3-oss/env-nextjs": "^0.11.1",
+		"@tanstack/react-query": "^5.52.2",
+		"@tanstack/react-table": "^8.20.5",
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/postgres": "^0.9.0",
 		"@zenstackhq/runtime": "2.4.1",
@@ -67,37 +74,43 @@
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
 		"date-fns": "^3.6.0",
+		"embla-carousel-react": "^8.2.0",
 		"geist": "^1.3.1",
+		"input-otp": "^1.2.4",
 		"leaflet": "^1.9.4",
-		"lucide-react": "^0.426.0",
-		"next": "^14.2.5",
+		"lucide-react": "^0.436.0",
+		"next": "^14.2.6",
 		"next-auth": "^5.0.0-beta.20",
 		"next-themes": "^0.3.0",
 		"nuqs": "^1.17.8",
 		"openapi-fetch": "^0.11.1",
 		"react": "18.3.1",
+		"react-day-picker": "^9.0.8",
 		"react-dom": "18.3.1",
-		"react-hook-form": "^7.52.2",
-		"react-icons": "^5.2.1",
+		"react-hook-form": "^7.53.0",
+		"react-icons": "^5.3.0",
 		"react-leaflet": "^4.2.1",
-		"refine-jsonapi": "^1.0.5",
+		"react-resizable-panels": "^2.1.1",
+		"recharts": "^2.12.7",
 		"sass": "^1.77.8",
+		"sonner": "^1.5.0",
 		"superjson": "^2.2.1",
-		"tailwind-merge": "^2.4.0",
+		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
+		"vaul": "^0.9.1",
 		"zod": "^3.23.8",
-		"zsa": "^0.5.1",
+		"zsa": "^0.6.0",
 		"zsa-react": "^0.2.2",
 		"zsa-react-query": "^0.2.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
-		"@hey-api/openapi-ts": "^0.52.3",
+		"@hey-api/openapi-ts": "^0.52.10",
 		"@types/decompress": "^4.2.7",
 		"@types/inquirer": "^9.0.7",
 		"@types/leaflet": "^1.9.12",
-		"@types/node": "^22.1.0",
-		"@types/react": "^18.3.3",
+		"@types/node": "^22.5.0",
+		"@types/react": "^18.3.4",
 		"@types/react-dom": "^18.3.0",
 		"@types/react-leaflet": "^3.0.0",
 		"@zenstackhq/openapi": "^2.4.1",
@@ -110,7 +123,7 @@
 		"postcss": "^8.4.41",
 		"prisma": "^5.18.0",
 		"prisma-json-schema-generator": "^5.1.5",
-		"tailwindcss": "^3.4.9",
+		"tailwindcss": "^3.4.10",
 		"tsconfig-paths": "^4.2.0",
 		"typescript": "^5.5.4",
 		"zenstack": "2.4.1"
