--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"@t3-oss/env-nextjs": "^0.11.1",
 		"@tanstack/react-query": "^5.52.2",
 		"@tanstack/react-table": "^8.20.5",
+		"@uidotdev/usehooks": "^2.4.1",
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/postgres": "^0.9.0",
 		"@zenstackhq/runtime": "2.4.1",
@@ -97,6 +98,7 @@
 		"superjson": "^2.2.1",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
+		"usehooks-ts": "^3.1.0",
 		"vaul": "^0.9.1",
 		"zod": "^3.23.8",
 		"zsa": "^0.6.0",
