--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"build": "next build",
+		"build": "BUILD=true next build",
 		"dev": "next dev",
 		"postinstall": "npm run generate",
 		"generate": "prisma generate",
