--- a/package.json
+++ b/package.json
@@ -28,9 +28,6 @@
 		"@conform-to/zod": "^1.1.5",
 		"@hookform/resolvers": "^3.9.0",
 		"@prisma/client": "^5.19.1",
-		"@trpc/client": "^11.0.0-rc.446",
-		"@trpc/react-query": "^11.0.0-rc.446",
-		"@trpc/server": "^11.0.0-rc.446",
 		"@radix-ui/react-accordion": "^1.2.0",
 		"@radix-ui/react-alert-dialog": "^1.1.1",
 		"@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -65,6 +62,9 @@
 		"@t3-oss/env-nextjs": "^0.11.1",
 		"@tanstack/react-query": "^5.53.3",
 		"@tanstack/react-table": "^8.20.5",
+		"@trpc/client": "^11.0.0-rc.446",
+		"@trpc/react-query": "^11.0.0-rc.446",
+		"@trpc/server": "^11.0.0-rc.446",
 		"@uidotdev/usehooks": "^2.4.1",
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/postgres": "^0.9.0",
@@ -95,6 +95,7 @@
 		"superjson": "^2.2.1",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
+		"use-debounce": "^10.0.3",
 		"usehooks-ts": "^3.1.0",
 		"vaul": "^0.9.1",
 		"zod": "^3.23.8",
