--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"@trpc/react-query": "^11.0.0-rc.446",
 		"@trpc/server": "^11.0.0-rc.446",
 		"@uidotdev/usehooks": "^2.4.1",
+		"@uploadthing/react": "^7.0.1",
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/postgres": "^0.10.0",
 		"class-variance-authority": "^0.7.0",
@@ -95,6 +96,7 @@
 		"superjson": "^2.2.1",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
+		"uploadthing": "^7.0.1",
 		"use-debounce": "^10.0.3",
 		"usehooks-ts": "^3.1.0",
 		"vaul": "^0.9.2",
