--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
 		"embla-carousel-react": "^8.2.1",
 		"geist": "^1.3.1",
 		"input-otp": "^1.2.4",
+		"jimp": "^1.6.0",
 		"leaflet": "^1.9.4",
 		"lucide-react": "^0.439.0",
 		"next": "^14.2.9",
